# torchkan

./: LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: python-package.yml  torchkan-ci.yml
tests/: test_baseline.py  test_bottleneck.py  test_conv.py  test_kagn_bottleneck.py  test_kan_fc.py  test_kan_focal_modulation.py  test_mlp_kan.py  test_moe_kan.py  test_self_attention.py
torchkan/: __init__.py
torchkan/conv/: __init__.py  attention_conv.py  fastkan_conv.py  kabn_conv.py  kacn_conv.py  kagn_bottleneck_conv.py  kagn_conv.py  kagn_conv_v2.py  kajn_conv.py  kaln_conv.py  kan_conv.py  moe_kan.py  moe_utils.py  relukan_bottleneck_conv.py  relukan_conv.py  wavkan_conv.py
torchkan/kan_conv/: fast_kan_conv.py  kagn_bottleneck_conv.py  kan_conv.py
torchkan/kan_linear/: __init__.py  kan.py  layers.py  utils.py
torchkan/linear/: __init__.py  kan.py  layers.py  utils.py
torchkan/models/: __init__.py  densekanet.py  reskanet.py  u2kanet.py  ukanet.py
torchkan/models/baselines/: __init__.py  conv_baseline.py  conv_kacn_baseline.py  conv_kagn_baseline.py  conv_kaln_baseline.py  conv_kan_baseline.py  conv_moe_kagn_bn_baseline.py  conv_wavkan_baseline.py  fast_conv_kan_baseline.py
torchkan/models/utils/: conv_utils.py  extra_layers.py
torchkan/utils/: __init__.py  normalization.py  regularization.py  typing.py
